# Koi

./: README.MD  pyproject.toml
src/koi/: cli.py  detect.py  listener.py  main.py  models.py  session.py  ui.py
src/koi/modules/: blueprint.py  download.py  duplicate.py  env_dump.py  get_processes.py  get_users.py  ligolo.py  linpeas.py  loader.py  network_enum.py  peas.py  populate_win.py  secrets_dump.py  sharphound.py  sysinfo.py  upload.py  wifi_enum.py  winscalate.py
src/koi/shell_handler/: __init__.py  core.py  exceptions.py  result.py  session.py
src/koi/utils/: bash_obfuscate.py  cache.py  cli.py  config.py  detect.py  interact.py  logger.py  obfuscate_ui.py  payloads.py  powerupgrade.py  ps_obfuscate.py  tcp.py  ui.py
