[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koi-handler"
version = "0.4.93"
description = "Reverse shell listener"
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.scripts]
koi = "koi.main:main"

[tool.setuptools.packages.find]
where = ["src"]